testsuite/tests/typecheck/should_fail/tcfail182.stderr

tcfail182.hs:9:3: error:
    • Couldn't match expected type: Prelude.Maybe a
                  with actual type: Maybe a0
      NB: ‘Prelude.Maybe’
            is defined in ‘GHC.Maybe’ in package ‘base-4.14.0.0’
          ‘Maybe’ is defined at tcfail182.hs:6:1-18
    • In the pattern: Foo
      In an equation for ‘f’: f Foo = 3
    • Relevant bindings include
        f :: Prelude.Maybe a -> Int (bound at tcfail182.hs:9:1)
